# Streamlit-Mcp-Host

./: README.md  ollama_client.py  ollama_server.py  pyproject.toml  requirements.txt  streamlit.py
