[project]
name = "streamlit-mcp-host"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "mcp[cli]>=1.2.0",
    "ollama>=0.4.8",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
